--- a/heather.css
+++ b/heather.css
@@ -32,14 +32,14 @@
 
 .hsleft {
     display: flex;
-    align-items: center;
+    align-content: flex-start;
+   
     flex-direction: column;
-
+    
 }
 
 .hsimage {
-    max-width: 400px;
-    margin-left: 110px;
+    max-width: 355px;
 
 
 }
@@ -91,27 +91,29 @@
 }
 
 .hsaccount {
-    margin-right: 15px;
-    margin-top: 70px;
+   
+    
     color: white;
 }
 
 .hswait {
-    margin-left: 1px;
     margin-top: 10px;
     color: white;
+    
+    
 }
 
 .hsbutton678 {
-    margin-right: 25px;
+    
     margin-top: 15px;
     color: white;
     background-color: blue;
     border: 1px solid white;
     padding: 7px;
     border-radius: 40px;
-    width: 120px;
+    width: 120px; 
     font-size: 12pt;
+   
 }
 
 .hssignin1 {
